# bp-training

./: .env  .gitignore  README.md  dagster.yaml  pyproject.toml
bp_training/: data.py  evaluate.py  finetune.py  main.py  model.py  model_factory.py  ner_finetune.py  scratch.ipynb  transformer_trainers.py
bp_training/util/: model_io.py  tracking.py
bp_training/workflow/: assets.py  config.py  jobs.py  ops.py
tests/: test_training_job.py
